--- a/monitoramento-de-temperatura/server/public/src/css/style.css
+++ b/monitoramento-de-temperatura/server/public/src/css/style.css
@@ -438,6 +438,10 @@ dialog h3 {
     margin-top: 5px;
 }
 
+.alert-sucess a{
+    color: #007bff;
+}
+
 .relatorio label,
 .relatorio input,
 .relatorio button {
